WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293066
[WPE] WPE Platform: Dark mode setting does not work
https://bugs.webkit.org/show_bug.cgi?id=293066
Summary
[WPE] WPE Platform: Dark mode setting does not work
Adrian Perez
Reported
2025-05-15 14:42:18 PDT
Steps to reproduce: % build-webkit --wpe [...] % cat > config.ini <<EOF [wpe-platform] dark-mode=true EOF % run-minibrowser --wpe -- \ --use-wpe-platform-api --config-file=config.ini
https://startpage.com
Expected outcome: The page shown uses their dark CSS styling. Actual outcome: Light (“normal”) CSS styling is used.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2025-05-16 01:00:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45483
EWS
Comment 2
2025-05-16 04:48:45 PDT
Committed
295000@main
(696227e4897c): <
https://commits.webkit.org/295000@main
> Reviewed commits have been landed. Closing PR #45483 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug