[WPE] WPE Platform: Dark mode setting does not work https://bugs.webkit.org/show_bug.cgi?id=293066

Reviewed by Adrian Perez de Castro.

Implement PageClientImpl::effectiveAppearanceIsDark() checking the value
of dark mode setting and notify the page that appearance has changed
when the setting changes.

Canonical link: https://commits.webkit.org/295000@main